get collection at remote url
